Fixed Overflow

--- a/src/app/models/models.component.css
+++ b/src/app/models/models.component.css
@@ -1,5 +1,3 @@
 .root {
-  height: 100%;
-  width: 100%;
   background-color: rgba(246,248,251,1);
 }
