--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,6 +1,4 @@
 .root {
-  height: 100%;
-  width: 100%;
   background-color: rgba(246,248,251,1);
 }
 
